<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/login_screen_padding">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint"
            app:helperText="@string/login_helper_text"
            app:layout_constraintBottom_toTopOf="@+id/password_input_layout"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            app:helperText="@string/password_helper_text"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintTop_toBottomOf="@+id/login_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/default_button_padding"
            android:paddingBottom="@dimen/default_button_padding"
            android:text="@string/login_button_text"
            android:textSize="@dimen/default_button_text_size"
            app:layout_constraintBottom_toTopOf="@+id/registration_button"
            app:layout_constraintTop_toBottomOf="@id/password_input_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registration_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/default_button_padding"
            android:paddingBottom="@dimen/default_button_padding"
            android:text="@string/registration_button_text"
            android:textSize="@dimen/default_button_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_button"
            app:layout_constraintWidth_percent="0.5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgot_password_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/default_button_padding"
            android:paddingBottom="@dimen/default_button_padding"
            android:text="@string/forgot_button_text"
            android:textSize="@dimen/default_button_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_button"
            app:layout_constraintWidth_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin_end"
        android:layout_marginBottom="@dimen/fab_margin_bottom"
        app:backgroundTint="@color/purple_700"
        app:srcCompat="@drawable/ic_baseline_report_problem"
        app:tint="@color/white" />

    <include
        android:id="@+id/loading_layout"
        layout="@layout/loading_layout" />

</FrameLayout>